// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render snapshot with less than 50 render snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#999",
        "borderRadius": 50,
        "height": 100,
        "width": 100,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "left": 0,
          "position": "absolute",
          "top": 0,
        },
        Object {
          "height": 100,
          "width": 50,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderBottomRightRadius": 0,
            "borderTopRightRadius": 0,
            "left": 0,
            "position": "absolute",
            "top": 0,
          },
          Object {
            "backgroundColor": "#3399FF",
            "borderRadius": 50,
            "height": 100,
            "overflow": "hidden",
            "transform": Array [
              Object {
                "translateX": 25,
              },
              Object {
                "rotate": "108deg",
              },
              Object {
                "translateX": -25,
              },
            ],
            "width": 50,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "left": 0,
          "position": "absolute",
          "top": 0,
        },
        Object {
          "height": 100,
          "width": 50,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderBottomRightRadius": 0,
            "borderTopRightRadius": 0,
            "left": 0,
            "position": "absolute",
            "top": 0,
          },
          Object {
            "backgroundColor": "#999",
            "borderRadius": 50,
            "height": 100,
            "overflow": "hidden",
            "transform": Array [
              Object {
                "translateX": 25,
              },
              Object {
                "rotate": "0deg",
              },
              Object {
                "translateX": -25,
              },
            ],
            "width": 50,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 42,
          "height": 84,
          "width": 84,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 12,
        }
      }
    >
      30
      %
    </Text>
  </View>
</View>
`;

exports[`render snapshot with less than 50 render snapshot with more than 50 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#999",
        "borderRadius": 50,
        "height": 100,
        "width": 100,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "left": 0,
          "position": "absolute",
          "top": 0,
        },
        Object {
          "height": 100,
          "width": 50,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderBottomRightRadius": 0,
            "borderTopRightRadius": 0,
            "left": 0,
            "position": "absolute",
            "top": 0,
          },
          Object {
            "backgroundColor": "#3399FF",
            "borderRadius": 50,
            "height": 100,
            "overflow": "hidden",
            "transform": Array [
              Object {
                "translateX": 25,
              },
              Object {
                "rotate": "180deg",
              },
              Object {
                "translateX": -25,
              },
            ],
            "width": 50,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "left": 0,
          "position": "absolute",
          "top": 0,
        },
        Object {
          "height": 100,
          "width": 50,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderBottomRightRadius": 0,
            "borderTopRightRadius": 0,
            "left": 0,
            "position": "absolute",
            "top": 0,
          },
          Object {
            "backgroundColor": "#3399FF",
            "borderRadius": 50,
            "height": 100,
            "overflow": "hidden",
            "transform": Array [
              Object {
                "translateX": 25,
              },
              Object {
                "rotate": "288deg",
              },
              Object {
                "translateX": -25,
              },
            ],
            "width": 50,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 42,
          "height": 84,
          "width": 84,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 12,
        }
      }
    >
      80
      %
    </Text>
  </View>
</View>
`;
